[project]
name = "medium-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.6.18",
    "arxiv>=4.0.0",
    "ddgs>=9.14.4",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.138.1",
    "lxml-html-clean>=0.4.5",
    "newspaper4k>=0.9.4.1",
    "openai>=2.43.0",
    "praw>=7.8.2",
    "pypdf>=6.13.3",
    "sqlalchemy>=2.0.51",
]
